Updated events page

--- a/events.html
+++ b/events.html
@@ -29,64 +29,16 @@
             <div class="events">
                 <div class="events-container">
                     <div class="event-image-container">
-                            <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
+                        <img src="assets/images/event4.jfif" alt="">
                         </a>
                     </div>
                     <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
-                        <p>
-                            <ul>
-                                <li>Registration Deadline:</li>
-                                <li>17th September, 2021</li>
-                            </ul>
-                        </p>
-                    </div>
-                </div>
-                <div class="events-container">
-                    <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
+                        <h4 class="text-white">Code & Cocktail Extravaganza: Where Tech Meets Taste!</h4>
+                        <p class="text-white">25th November, 2023</p>
                         <p>
                         <ul>
                             <li>Registration Deadline:</li>
-                            <li>17th September, 2021</li>
-                        </ul>
-                        </p>
-                    </div>
-                </div>
-                <div class="events-container">
-                    <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
-                        <p>
-                        <ul>
-                            <li>Registration Deadline:</li>
-                            <li>17th September, 2021</li>
-                        </ul>
-                        </p>
-                    </div>
-                </div>
-                <div class="events-container">
-                    <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
-                        <p>
-                        <ul>
-                            <li>Registration Deadline:</li>
-                            <li>17th September, 2021</li>
+                            <li>25th November, 2023</li>
                         </ul>
                         </p>
                     </div>
@@ -98,7 +50,7 @@
             <div class="events">
                 <div class="events-container">
                     <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
+                        <img src="assets/images/event1.jpeg" alt="">
                         </a>
                     </div>
                     <div class="event-details">
@@ -114,44 +66,28 @@
                 </div>
                 <div class="events-container">
                     <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
+                        <img src="assets/images/event3.jpeg" alt="">
                         </a>
                     </div>
                     <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
+                        <h4 class="text-white">Becoming A World Class Software Engineer</h4>
+                        <p class="text-white">21th August, 2019</p>
                         <p>
                         <ul>
                             <li>Registration Deadline:</li>
-                            <li>17th September, 2021</li>
+                            <li>17th November, 2020</li>
                         </ul>
                         </p>
                     </div>
                 </div>
                 <div class="events-container">
                     <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
+                        <img src="assets/images/event2.jpg" alt="">
                         </a>
                     </div>
                     <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
-                        <p>
-                        <ul>
-                            <li>Registration Deadline:</li>
-                            <li>17th September, 2021</li>
-                        </ul>
-                        </p>
-                    </div>
-                </div>
-                <div class="events-container">
-                    <div class="event-image-container">
-                        <img src="assets/images/PHOTO-2019-03-04-14-42-37.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="event-details">
-                        <h4 class="text-white">Online Short Courses</h4>
-                        <p class="text-white">20th August, 2020</p>
+                        <h4 class="text-white">Global CyberTech Workshop</h4>
+                        <p class="text-white">21th May, 2021</p>
                         <p>
                         <ul>
                             <li>Registration Deadline:</li>
