Finished faculty page

--- a/faculty.html
+++ b/faculty.html
@@ -24,12 +24,56 @@
                 <h2>Inroducing DCS</h2>
             </div>
         </section>
-        <section class="facult-info">
-            <h1>The DCS Faculty</h1>
-            <p>
+        <section class="faculty-info">
+            <div class="h1-container">
+                <h1>The DCS Faculty</h1>
+            </div>
+            <div class="p-container">
+                <p>
                 The Department of Computer Science at the University of Ghana has a diverse and accomplished faculty. The faculty members are experts in their respective fields and are dedicated to providing students with a world-class education in
                 computer science.<br>
-            </p>
+                The department has a total of 15 faculty members, 3 of whom are professors, 4 associate professors, 4 senior lecturers, 3 lecturers and 1 assistant lecturer. The department also has 2 teaching assistants for each course and 2 administrative staff.
+                </p>
+            </div>
+        </section>
+        <section class="faculty-members">
+            <div class="h1-container">
+                <h1>Meet Our Faculty Members</h1>
+            </div>
+            <div class="row">
+                <div class="faculty-member">
+                    <div class="faculty-member-image">
+                        <img src="assets/images/head of department.jfif" alt="faculty member">
+                    </div>
+                    <div class="faculty-member-info">
+                        <h2>Prof. Kwame Boakye</h2>
+                        <h3>Head of Department</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="two-pics">
+                <div class="faculty-member">
+                    <div class="faculty-member-image">
+                        <img src="assets/images/mark-atta.jfif" alt="faculty member">
+                    </div>
+                    <div class="faculty-member-info">
+                        <h2>Dr. Mark Atta-Mensah</h2>
+                        <h3>Lecturer</h3>
+                    </div>
+                </div>
+                <div class="faculty-member">
+                    <div class="faculty-member-image">
+                        <img src="assets/images/mr-soli.jfif" alt="faculty member">
+                    </div>
+                    <div class="faculty-member-info">
+                        <h2>Dr. Tettey Michael Soli</h2>
+                        <h3>Lecturer</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="to-go-links">
+
         </section>
     </main>
     <script src="scripts/footer.js"></script>
