--- a/template.html
+++ b/template.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/general.css">
-    <link rel="stylesheet" type="text/css" href="css/faculty.css">
-    <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon">
-    <title>UG | Department Of Computer Science</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/general.css">
+        <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon">
+        <title>UG | Department Of Computer Science</title>
+    </head>
+    <body>
+        <script src="scripts/header.js"></script>
+        <script src="scripts/nav-mobile.js"></script>
+        <main>
 
-<body>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/nav-mobile.js"></script>
-    <main>
-
-    </main>
-    <script src="scripts/footer.js"></script>
-</body>
-
-</html>
+        </main>
+        <script src="scripts/footer.js"></script>
+    </body>
+</html>html
